[tool.poetry]
name = "text2img"
version = "0.1.0"
description = ""
authors = ["PaoPaoYue <846260131@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.21"
httpx = "^0.28.1"
ray = {extras = ["serve"], version = "^2.44.1"}
torch = "^2.6.0"
diffusers = "^0.33.1"
transformers = "^4.51.3"
xformers = "^0.0.29.post3"
accelerate = "^1.6.0"
fastapi = {version = "0.112.0", extras = ["standard"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
